--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+C<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,7 +12,7 @@
     <section class="chat__section">
         <div class="brand">
             <img height="40" src="/2-2-whatsapp-free-png-image.png" alt="">
-            <h1>Whatsap</h1>
+            <h1>RealChat</h1>
         </div>
         <div class="message__area"></div>
         <div>
