--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
             <textarea id="textarea" cols="30" rows="1" placeholder="Write a message..."></textarea>
         </div>
         <div>
-            
-            <span><textarea id="room" cols="20" rows="1" placeholder="type room name.."></textarea></span>
-             <span><button id="join" type="button" width="15px">send to room</button></span>
-             
+            <span><textarea id="room" cols="25" rows="1" width="50%" height="15px" placeholder="type room name.."></textarea></span>
         </div>
         <div>
+            <button id="join" type="button" width="15px">Send msg in room</button><br><br>
             <button id="join1" type="button" width="15px">Join room</button>
         </div>
     </section>
