--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <section class="chat__section">
+        <button id="join1" type="button" width="15px">Join room</button><br><br>
         <div class="brand">
             <img height="40" src="/2-2-whatsapp-free-png-image.png" alt="">
             <h1>RealChat</h1>
@@ -23,7 +24,6 @@
         </div>
         <div>
             <button id="join" type="button" width="15px">Send msg in room</button><br><br>
-            <button id="join1" type="button" width="15px">Join room</button>
         </div>
     </section>
     <script src="/socket.io/socket.io.js"></script>
