--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div>
             <span><textarea id="room" cols="25" rows="1" width="50%" height="15px" placeholder="type room name.."></textarea></span>
         </div>
-            <button id="join2" type="button" width="15px">Global Msg</button><br><br>
-            <button id="join" type="button" width="15px">Send msg in room</button><br><br>
-            <button id="join1" type="button" width="15px">Join room</button><br>
+            <button id="join2" type="button" width="15px">Send Msg Globally</button><br><br>
+            <button id="join" type="button" width="15px">Send Msg In Room</button><br><br>
+            <button id="join1" type="button" width="15px">Join Room</button><br>
         </div>
     </section>
     <script src="/socket.io/socket.io.js"></script>
